Fix annoying shifting when highlighting elements

--- a/public/maininfo.css
+++ b/public/maininfo.css
@@ -116,6 +116,7 @@ main {
     align-items: left;
     padding: 20px;
     margin: 20px;
+    border: 2px solid var(--palepurple);
     background-color: var(--palepurple);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
